[gd_scene load_steps=10 format=2]

[ext_resource path="res://StampTask.gd" type="Script" id=1]
[ext_resource path="res://work/stamp_ok_button_hover.png" type="Texture" id=2]
[ext_resource path="res://work/stamp_ok_button_pressed.png" type="Texture" id=3]
[ext_resource path="res://work/stamp_ok_button_normal.png" type="Texture" id=4]
[ext_resource path="res://work/stamp_nok_button_normal.png" type="Texture" id=5]
[ext_resource path="res://work/stamp_nok_button_pressed.png" type="Texture" id=6]
[ext_resource path="res://work/stamp_nok_button_hover.png" type="Texture" id=7]
[ext_resource path="res://DocumentsLeftCount.gd" type="Script" id=8]
[ext_resource path="res://StampTool.tscn" type="PackedScene" id=9]

[node name="StampTask" type="Node2D"]
script = ExtResource( 1 )

[node name="UnstampedPile" type="Node2D" parent="."]
position = Vector2( 36, 50 )

[node name="StampedPile" type="Node2D" parent="."]
position = Vector2( 550, 53 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -82.0
margin_bottom = 82.0

[node name="StampOKButton" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 80.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )

[node name="StampNOKButton" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
margin_top = 84.0
margin_right = 80.0
margin_bottom = 164.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.5
margin_right = 59.5
margin_bottom = 40.0

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer"]
margin_top = 13.0
margin_right = 107.0
margin_bottom = 27.0
text = "Documents left: "

[node name="DocumentsLeftCount" type="Label" parent="CanvasLayer/HBoxContainer"]
margin_left = 111.0
margin_top = 13.0
margin_right = 119.0
margin_bottom = 27.0
text = "0"
script = ExtResource( 8 )

[node name="StampTool" parent="." instance=ExtResource( 9 )]

[connection signal="stamp_count_update" from="." to="CanvasLayer/HBoxContainer/DocumentsLeftCount" method="_on_StampTask_stamp_count_update"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/StampOKButton" to="." method="_on_change_ok_stamp"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/StampNOKButton" to="." method="_on_change_nok_stamp"]
